# ska-sdp-batch-preprocess

./: .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  .release  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  PrivateRules.mak  README.md  pyproject.toml
config/: config.yaml  config_default.yml
configuration/: config.yaml
data/: config.yml
docker/: Dockerfile
docs/source/: index.rst
docs/src/: conf.py  csd3_workflow.rst  devguide.rst  index.rst  installation.rst  measurement_set.rst  pipeline.rst  processing_funcs.rst
slurm/: csd3.sh
src/ska_sdp_batch_preprocess/: __init__.py  __main__.py  application.py  config.py  dp3_config.py  dp3_params.py  functions.py  h5parm.py  h5parm_validator.py  logging_setup.py  mapped_func.py  pipeline.py  scheduler.py  step_preparation.py
src/ska_sdp_batch_preprocess/apps/: batch_preprocessing.py  pipeline.py
src/ska_sdp_batch_preprocess/config/: __init__.py  core.py  validate_config.py  validation.py
src/ska_sdp_batch_preprocess/config/schemas/: config.json  config.yaml  step_aoflagger.yaml  step_applycal.yaml  step_averager.yaml  step_demixer.yaml  step_msin.yaml  step_msout.yaml  step_predict.yaml  step_preflagger.yaml
src/ska_sdp_batch_preprocess/configurable_chain/: chain_runner.py  conf_example.yaml  experiment.py
src/ska_sdp_batch_preprocess/data/: config.yml
src/ska_sdp_batch_preprocess/functions/: distributed_func.py  mapped_func.py
src/ska_sdp_batch_preprocess/h5parm/: __init__.py  h5parm.py  soltab.py
src/ska_sdp_batch_preprocess/h5parm_new/: __init__.py  assertions.py  core.py  exceptions.py  h5parm.py  soltab.py
src/ska_sdp_batch_preprocess/mswriter/: __init__.py  core.py  newschema.yml  schema.yml  schema_generated.yml
src/ska_sdp_batch_preprocess/operations/: measurement_set.py  ms.py  pipeline.py  processing_intent.py  ps.py
src/ska_sdp_batch_preprocess/pipeline/: __init__.py  dp3_parametrisation.py  pipeline.py  step_preparation.py
src/ska_sdp_batch_preprocess/utils/: log_handler.py  tools.py
tests/: conftest.py  dp3_availability.py  h5parm.py  h5parm_generation.py  ms_reading.py  test_applycal.py  test_demixing.py  test_dp3_command_generation.py  test_dummy_function.py  test_flagging.py  test_frequency_averaging.py  test_pipeline_app.py  test_pipeline_config_validation.py  test_rfi_masking.py  test_time_averaging.py
tests/data/: diagonal.h5  fulljones.h5  scalarphase.h5  sky_model.txt  sky_model_demixing.txt
tests/h5parm/: test_h5parm.py  test_soltab.py
tests/h5parm_new/: test_h5parm.py  test_soltab.py  test_soltab_validation.py
tests/pipeline_cli_app/: __init__.py  config.yaml  conftest.py  test_applycal.py  test_pipeline_app.py
