[tool.poetry]
name = "ska_sdp_batch_preprocess"
version = "1.0.0"
description = "SKA Distributed batch preprocessing pipeline"
authors = ["Team HIPPO"]
license = "BSD-3-Clause"
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "skao"
url = "https://artefact.skao.int/repository/pypi-internal/simple"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
xradio = "^0.0.30"
graphviper = "^0.0.27"

#The following three libraries are using specific branches to function appropriately, this will be changed and would need updating when the branches are merged or deleted
ska-sdp-datamodels = {git = "https://gitlab.com/ska-telescope/sdp/ska-sdp-datamodels.git"}
ska-sdp-func-python = {git = "https://gitlab.com/ska-telescope/sdp/ska-sdp-func-python.git"}
ska-sdp-func = {git = "https://gitlab.com/ska-telescope/sdp/ska-sdp-func.git", rev="1.2.0"}
#NOTE: Not adding aoflagger right now since it's causing import issues.
#aoflagger = {git = "https://gitlab.com/aroffringa/aoflagger.git"}
ska-telmodel = "^1.17"
numpy = "^1.26"
python-casacore = "^3.5.2"
PyYAML = "^6.0.1"
jsonschema = "^4.23.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pylint = "^2.8.2"
pylint-junit = "^0.3.2"
pytest = "^7.1.0"
pytest-cov = "^2.10.1"
isort = "^5.6.4"
flake8 = "^3.9.2"
coverage = "^6.1.1"

# Install with `poetry install --with docs`
pytest = "^8.3.2"
[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.0.0"
recommonmark = "^0.7.1"

[tool.poetry.extras]
ska-sdp-func = ["ska-sdp-func"]
ska-sdp-func-python = ["ska-sdp-func-python"]
#aoflagger = ["aoflagger"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"