[tool.poetry]
authors = ["Team HIPPO"]
description = "SKA Distributed batch preprocessing pipeline"
license = "BSD-3-Clause"
name = "ska-sdp-batch-preprocess"
readme = "README.md"
version = "2.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[[tool.poetry.source]]
name = "skao"
priority = "primary"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[tool.poetry.scripts]
ska-sdp-batch-preprocess = "ska_sdp_batch_preprocess.apps.pipeline:main"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pyyaml = "^6.0.1"
jsonschema = "^4.4.0"
h5py = "^3.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
build = "^0.10.0"
coverage = "^6.1.1"
flake8 = "^3.9.2"
isort = "^5.6.4"
pylint = "^2.8.2"
pylint-junit = "^0.3.2"
pytest = "^8.3.2"
pytest-cov = "^2.10.1"
python-casacore = "^3.5.2"

# Install with `poetry install --with docs`
[tool.poetry.group.docs.dependencies]
recommonmark = "^0.7.1"
ska-ser-sphinx-theme = "^0.2.0"
sphinx = "^7.0.0"
